Deleted the "reset" portion of bootstrap.css in favor of a "normalize" in styles.css
All custom css should go into the middle of styles.css where it says
"primary styles"

--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,9 @@ td { vertical-align: top; }
    Author: 
    ========================================================================== */
 
-
+body {
+        padding-top: 60px;
+      }
 
 
 
