--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -632,9 +632,9 @@ select,
 .uneditable-input {
   display: inline-block;
   width: 300px;
-  height: 75px;
+  height: 40px;
   padding: 10px;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 18px;
   color: #808080;
   border: 1px solid #ccc;
@@ -1708,6 +1708,26 @@ a.menu:after, .dropdown-toggle:after {
   font-weight: 200;
   line-height: 27px;
 }
+.g-unit {
+  background-color: #f5f5f5;
+  margin-bottom: 0px;
+  padding: 20px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.g-unit h1 {
+  margin-bottom: 0;
+  font-size: 60px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+.g-unit p {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+}
+
 footer {
   margin-top: 17px;
   padding-top: 17px;
