--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,65 @@
 body {
         padding-top: 60px;
       }
+      
+ul, li {
+          list-style-type: none;
+      }
+      
+      
+<!-- footer -->
+.footer {
+	width: 100%;
+	height: 150px;
+	/*background-color: #fefdf1;
+	border: 3px solid #feb101;
+	-moz-border-radius: 10px;
+	border-radius: 10px;*/
+	padding: 5px;
+	padding-top: 10px;
+	margin-top: 100px;
+	color: rgba(210, 135, 3, 0.8);
+	text-align: center;
+	border-top: 1px solid rgba(210, 135, 3, 0.8);
+	line-height: 30px;
+	}
+	
+.footer a:link, #footer a:visited, #footer a:active {
+	text-decoration: none;
+	color: #333;
+}
+
+.footer a:hover {
+	color: #666;
+	text-decoration: underline;
+}
+
+
+.column1{
+	float: left;
+	
+.clearBoth { clear:both; }
+	text-align: left;
+	width: 202px;
+	height: 100px;
+	margin-right: 10px;
+	margin-left: 20px;
+}
+.column2, .column3, .column4 {
+	float: left;
+	.clearBoth { clear:both; }
+	text-align: left;
+	width: 202px;
+	height: 100px;
+	margin-right: 25px;
+	margin-left: 5px;
+}
+.copyright {
+	float: right;
+	.clearBoth { clear:both; }
+	text-align: left;
+	width: 202px;
+	height: 100px;
+	margin-right: 10px;
+	margin-left: 5px;
+}
