--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,27 @@ ul, li {
           list-style-type: none;
       }
       
+.display-unit {
+  background-color: #f5f5f5;
+  margin-bottom: 30px;
+  padding: 15px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.display-unit h1 {
+  margin-bottom: 0;
+  font-size: 60px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+.display-unit p {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+}      
+      
+      
       
 <!-- footer -->
 .footer {
