--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2085,6 +2085,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .well {
   background-color: #f5f5f5;
   margin-bottom: 5px;
+  margin-top: 15px;
   padding: 19px;
   min-height: 10px;
   border: 1px solid #eee;
