--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1710,20 +1710,20 @@ a.menu:after, .dropdown-toggle:after {
 }
 .g-unit {
   background-color: #f5f5f5;
-  margin-bottom: 0px;
-  padding: 20px;
+  margin-bottom: 10px;
+  padding: 15px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
 .g-unit h1 {
   margin-bottom: 0;
-  font-size: 60px;
+  font-size: 45px;
   line-height: 1;
   letter-spacing: -1px;
 }
 .g-unit p {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 200;
   line-height: 27px;
 }
@@ -1744,6 +1744,27 @@ a.menu:after, .dropdown-toggle:after {
   letter-spacing: -1px;
 }
 .a-unit p {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+}
+
+.display-unit {
+  background-color: #f5f5f5;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  padding: 0px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.display-unit h1 {
+  margin-bottom: 0;
+  font-size: 55px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+.display-unit p {
   font-size: 18px;
   font-weight: 200;
   line-height: 27px;
@@ -2085,7 +2106,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .well {
   background-color: #f5f5f5;
   margin-bottom: 5px;
-  margin-top: 15px;
+  margin-top: 0px;
   padding: 19px;
   min-height: 10px;
   border: 1px solid #eee;
