--- a/css/styles.css
+++ b/css/styles.css
@@ -103,22 +103,57 @@ ul, li {
   background-position: 0px -126px;
 }
 
-.layer1 {
+.listresults {
 margin: 0;
 padding: 0;
 }
  
 .heading {
-margin: 1px;
-color: #fff;
-padding: 3px 10px;
-cursor: pointer;
-position: relative;
-background-color:#c30;
+  background-color: #c43c35;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
+  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
+  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: linear-gradient(top, #ee5f5b, #c43c35);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #c43c35 #c43c35 #882a25;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+}
+
 }
 .content {
-padding: 5px 10px;
-background-color:#fafafa;
 }
+
 p { padding: 5px 0; }
+
+.option1 {
+  background-color: #f5f5f5;
+  display: inline-block;
+  float: left;
+  margin-bottom: 10px;
+  padding: 15px;
+
+  }
+  
+  .option2 {
+    background-color: #f5f5f5;
+      display: inline-block;
+    float: center;
+    margin-bottom: 10px;
+    padding: 15px;
+  
+   }
+    
+.option3 {
+  background-color: #f5f5f5;
+    display: inline-block;
+  float: right;
+  margin-bottom: 10px;
+  padding: 15px;
+   
+
 
