--- a/css/styles.css
+++ b/css/styles.css
@@ -132,28 +132,34 @@ p { padding: 5px 0; }
 
 .option1 {
   background-color: #f5f5f5;
+  width: 29%;
   display: inline-block;
   float: left;
-  margin-bottom: 10px;
+    margin-right: 6px;
+    margin-bottom: 10px;
   padding: 15px;
 
   }
   
   .option2 {
     background-color: #f5f5f5;
+    width: 29%;
       display: inline-block;
     float: center;
+   margin-right: 6px;
     margin-bottom: 10px;
-    padding: 15px;
+  padding: 15px;
   
    }
     
 .option3 {
   background-color: #f5f5f5;
+  width: 29%;
     display: inline-block;
   float: right;
-  margin-bottom: 10px;
+   margin-right: 6px;
+    margin-bottom: 10px;
   padding: 15px;
-   
+{   
 
 
