--- a/css/styles.css
+++ b/css/styles.css
@@ -109,16 +109,8 @@ padding: 0;
 }
  
 .heading {
-  background-color: #c43c35;
+  background-color: #75BFBF;
   background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
-  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
-  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: linear-gradient(top, #ee5f5b, #c43c35);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #c43c35 #c43c35 #882a25;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -131,7 +123,7 @@ padding: 0;
 p { padding: 5px 0; }
 
 .option1 {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   width: 29%;
   display: inline-block;
   float: left;
@@ -142,7 +134,7 @@ p { padding: 5px 0; }
   }
   
   .option2 {
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     width: 29%;
       display: inline-block;
     float: center;
@@ -153,7 +145,7 @@ p { padding: 5px 0; }
    }
     
 .option3 {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   width: 29%;
     display: inline-block;
   float: right;
