--- a/css/styles.css
+++ b/css/styles.css
@@ -109,49 +109,93 @@ padding: 0;
 }
  
 .heading {
-  background-color: #75BFBF;
+  background-color: #f5f5f5;
   background-repeat: repeat-x;
+  margin-bottom: 10px;
+  padding: 10px;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #c43c35 #c43c35 #882a25;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  cursor: hand;
+  cursor: pointer;
 }
 
 }
 .content {
 }
 
-p { padding: 5px 0; }
+.listresults p {
+   font-size: 20px;
+   padding: 15px 5px 20px 20px;
+}
+
+.createlist {
+  width: 500px;
+  margin-right: 10px;
+  height: 25px;
+}
+
+#create_submit {
+   width: 140px;
+}
 
 .option1 {
-  background-color: #ffffff;
+  background-color: #f5f5f5;
   width: 29%;
   display: inline-block;
   float: left;
     margin-right: 6px;
     margin-bottom: 10px;
   padding: 15px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #c43c35 #c43c35 #882a25;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  cursor: hand;
+  cursor: pointer;
 
   }
   
   .option2 {
-    background-color: #ffffff;
+    background-color: #f5f5f5;
     width: 29%;
       display: inline-block;
     float: center;
    margin-right: 6px;
     margin-bottom: 10px;
   padding: 15px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #c43c35 #c43c35 #882a25;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  cursor: hand;
+  cursor: pointer;
   
    }
     
 .option3 {
-  background-color: #ffffff;
+  background-color: #f5f5f5;
   width: 29%;
     display: inline-block;
   float: right;
    margin-right: 6px;
     margin-bottom: 10px;
   padding: 15px;
-{   
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #c43c35 #c43c35 #882a25;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  cursor: hand;
+  cursor: pointer;
+}  
 
 
