Facebook sharing functional

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -782,6 +782,11 @@ textarea.xxlarge,
 select.xxlarge {
   width: 600px;
 }
+.createlist {
+  width: 700px;
+  
+
+}
 textarea.xxlarge {
   overflow-y: auto;
 }
